[package]
name = "stable_morphing"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
dotenvy = "0.15.7"
image = "0.25.1"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde_json = "1.0.115"
# tokio = { version = "1.37.0", features = ["full"] }

[dependencies.serde]
version = "1.0.197"
features = ["derive"]
